# bepeka

./: .gitignore  README.md  classifier.ipynb  dataset.ipynb  experimental_classifier.ipynb  flake.nix  metadata.json  model.ipynb  preprocessing.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  sampling.ipynb  shell.nix
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
bepeka/: classifier.ipynb  disbelief.ipynb  preprocessing.ipynb
variables/: variables.index
