[tool.poetry]
name = "bepeka"
version = "0.4.0"
description = "A sequence classification experiment using transfer learning and recurrent neural networks to classify hentai by tags"
authors = ["William Phetsinorath <william.phetsinorath@shikanime.studio>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "~3.10"
hentai = "~3.2.9"
matplotlib = "~3.5.1"
seaborn = "~0.11.2"
Pillow = "~9.0.1"
numpy = "~1.22.3"
tensorflow = "~2.8.0"
tensorflow-hub = "~0.12.0"
pandas = "~1.4.1"
jupyterlab = "~3.3.2"
transformers = "^4.26.0"
sentencepiece = "^0.1.97"
torch = "^1.13.1"
accelerate = "^0.16.0"
ipywidgets = "^7.7.2"

[tool.poetry.dev-dependencies]
black = "~22.1.0"
tensorboard = "~2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"